correcting markup after validation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html5>
+<!doctype html>
 <html lang="en">
 	<head>
 		<link href="http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400"
@@ -12,7 +12,7 @@
 		<header>
 			<section id="masthead">
 				<div id="logo">
-					<img src="images/MarioKartWii_logo.jpg" width="300" height="183.75"
+					<img src="images/MarioKartWii_logo.jpg" width="300" height="184"
 					alt="Mario Kart Wii logo"/>
 				</div>
 			</section>
