editing markup for columns ol

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 					three areas of gameplay:</p>
 				<div id="categories"><ol>
 					<li><h3>Character Faves</h3></li>
-					<p>We have our own race time avatar. Some like the main guys, others
-					live vicariously through their evil alter egos like Waluigi. We
-					highlight some perennial faves as well as dark horses. Perhaps you may
-					change your mind about who your favorite really is!</P
+					<p>We each have our own favorite race time avatar - our go to driver.
+					Some like the main guys, others live vicariously through their evil
+					alter egos like Waluigi. We highlight some perennial faves as well as
+					dark horses. Perhaps you may change your mind about who your favorite
+					really is!</p>
 					<li><h3>Course Faves</h3></li>
 					<p>Each character has a course(s) that they should shine on. The truth
 					is, each course has different playability as the settings are tweaked.
