--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<nav>
 				<div id="main_nav">
 					<ul>
-						<a href="#mark" class="button red small">ON YOUR MARK</a>
-						<a href="#set" class="button orange small">GET SET</a>
-						<a href="#go" class="button green small">GO!</a>
+						<li><a href="#mark" class="button red small">ON YOUR MARK</a></li>
+						<li><a href="#set" class="button orange small">GET SET</a></li>
+						<li><a href="#go" class="button green small">GO!</a></li>
 					</ul>
 				</div>
 			</nav>
