editing categories css for ol and p issues

--- a/index.html
+++ b/index.html
@@ -49,24 +49,23 @@
 					clutter and confusion (we'll leave that to the racing) we focus on
 					three areas of gameplay:</p>
 				<div id="categories"><ol>
-					<li><h3>Character Faves</h3></li>
+					<li><h3>Character Faves</h3>
 					<p>We each have our own favorite race time avatar - our go to driver.
 					Some like the main guys, others live vicariously through their evil
 					alter egos like Waluigi. We highlight some perennial faves as well as
 					dark horses. Perhaps you may change your mind about who your favorite
-					really is!</p>
-					<li><h3>Course Faves</h3></li>
+					really is!</p></li>
+					<li><h3>Course Faves</h3>
 					<p>Each character has a course(s) that they should shine on. The truth
 					is, each course has different playability as the settings are tweaked.
 					For example, one advantaged racer on a particular course loses their
 					edge when the item style is altered (curse you first place turtle
-					shell!).</p>
-					<li><h3>Competition</h3></li>
+					shell!).</p></li>
+					<li><h3>Competition</h3>
 					<p>Their are tips and tricks to beating out the other racers, albeit
 					few and fairly well known. However, competition still has a lure that
 					is difficult to ignore, especially when your five year old is kicking
-					booty chaw - your booty, that is!</p>
-					<p>
+					booty chaw - your booty, that is!</p></li>
 				</div> <!-- end categories -->
 				</ol>
 				<aside>
