more validation error message corrections

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
 						<li><img src="images/yoshi.png" width="50" height="50"
 						title="Yoshi" alt="Yoshi"/></li>
 						<li><img src="images/peach.png" width="50"
-						height="50" alt="Princess Peach" title="Princess Peach"
-						alt="Princess Peach"/></li>
+						height="50" alt="Princess Peach" title="Princess Peach"/></li>
 					</ul>
 					</div> <!-- end gal one -->
 					<div id="char_gal_two">
