--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<section id="masthead">
 				<div id="logo">
 					<img src="images/MarioKartWii_logo.jpg" width="300" height="184"
-					alt="Mario Kart Wii logo"/>
+					title="Mario Kart Weeeeee! alt="Mario Kart Wii logo"/>
 				</div>
 			</section>
 			<nav>
