starting to apply media queries

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<link href="http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400"
 		rel="stylesheet" type="text/css">
 		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1,
+		maximum-scale=1">
 		<title>The Official Mario Kart Wii Fansite</title>
 		<link rel="stylesheet" href="css/main.css">
 	</head>
