edited css and markup in local directory
copy and paste into github repo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<a href="http://en.wikipedia.org/wiki/Mario_Kart">here</a>.</p>
 	
 		<div id="main">
-			<div id="top_main">
+		  <div id="top_main">
 				<div id="anchor_one"><a id="mark"><h2>On Your Mark…</h2></a></div>
 					<p><strong>This site</strong> aims to celebrate the innocent, yet
 					rowdy and playfully vindictive aspect of Mario Kart Wii. To avoid
@@ -70,10 +70,6 @@
 					booty chaw - your booty, that is!</p></li>
 					</ol>
 				</div> <!-- end categories -->
-				<aside>
-					<article>
-					</article>
-				</aside>
 			</div>
 		
 			<div id="middle_main">
@@ -82,8 +78,8 @@
 					from the sweet looking princesses to the  strangely cute, fantastical
 					racers are profiled.</p>
 <!-- begin character gallery -->
-				<div id="char_gal">
 				<h3>Character Gallery</h3>
+				<div id="char_gal">
 					<div id="char_gal_one">
 					<ul>
 						<li><img src="images/mario.png" width="50" height="50"
@@ -110,10 +106,17 @@
 						title="Waluigi" alt="Waluigi"/></li>
 					</ul>
 					</div> <!-- end gal two -->
-				</div>
-<!-- end character gallery -->
 			</div>
-		
+<!-- end character gallery -->
+                <div id="aside">
+                <aside>
+					<!-- <article> -->
+					  <blockquote>&quot;Auto racing is boring except when a car is going at least 172 miles per hour upside down.&quot;</blockquote>
+						<p>Dave Barry</p> <!-- Read more at http://www.brainyquote.com/quotes/keywords/racing.html#Zy3BlJFKp5mcRPRl.99 -->
+					<!-- </article> -->
+				</aside>
+                </div> <!-- end aside -->
+			</div> <!-- middel main -->
 			<div id="bottom_main">
 				<a id="go"><h2>GO!</h2></a>
 					<p><strong>Proof positive</strong>, that's what we want! There's
