--- a/index.html
+++ b/index.html
@@ -1,298 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link href="http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400"
-		rel="stylesheet" type="text/css">
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1,
-		maximum-scale=1">
-		<title>The Official Mario Kart Wii Fansite</title>
-		<link rel="stylesheet" href="css/main.css">
+		<meta charset="utf-8" />
+		<title>Example Title</title>
 	</head>
 	<body>
-		<div id="wrapper">
-		<header>
-			<section id="masthead">
-				<div id="logo">
-					<img src="images/MarioKartWii_logo.jpg" width="300" height="184"
-					title="Mario Kart Weeeeee!" alt="Mario Kart Wii logo"/>
-				</div>
-			</section>
-			<nav>
-				<div id="main_nav">
-					<ul>
-						<li><a href="#mark" class="button red small">ON YOUR MARK</a></li>
-						<li><a href="#set" class="button orange small">GET SET</a></li>
-						<li><a href="#go" class="button green small">GO!</a></li>
-					</ul>
-				</div>
-			</nav>
-			<div id="tagline">
-				<h1>Drivers start your engines!</h1>
-			</div>
-		</header>
-				<p><strong>If you are particularly savvy</strong> you would have pressed
-				your gas pedal shortly after &quot;2&quot; in the countdown! That's right
-				racers, we are serious about having fun, fun in a sort of sadistic, beam
-				your enemy with a turtle shell way that is!</p>
-				<p>From mini boosts to drifting, we love the recklessness of Mario Kart
-				Wii. From the advent of this raucous racing title from Nintendo, racers
-				young and old alike have engaged in some of the most haphazard go kart
-				competition ever.</p>
-				<p>This is just a fan site, visit their wiki-page for a more thorough look
-				at Mario Kart on all platforms
-				<a href="http://en.wikipedia.org/wiki/Mario_Kart">here</a>.</p>
-	
-		<div id="main">
-		  <div id="top_main">
-				<div id="anchor_one"><a id="mark"><h2>On Your Mark…</h2></a></div>
-					<p><strong>This site</strong> aims to celebrate the innocent, yet
-					rowdy and playfully vindictive aspect of Mario Kart Wii. To avoid
-					clutter and confusion (we'll leave that to the racing) we focus on
-					three areas of gameplay:</p>
-				<div id="categories"><ol>
-					<li><h3>Character Faves</h3>
-					<p>We each have our own favorite race time avatar - our go to driver.
-					Some like the main guys, others live vicariously through their evil
-					alter egos like Waluigi. We highlight some perennial faves as well as
-					dark horses. Perhaps you may change your mind about who your favorite
-					really is!</p></li>
-					<li><h3>Course Faves</h3>
-					<p>Each character has a course(s) that they should shine on. The truth
-					is, each course has different playability as the settings are tweaked.
-					For example, one advantaged racer on a particular course loses their
-					edge when the item style is altered (curse you first place turtle
-					shell!).</p></li>
-					<li><h3>Competition</h3>
-					<p>Their are tips and tricks to beating out the other racers, albeit
-					few and fairly well known. However, competition still has a lure that
-					is difficult to ignore, especially when your five year old is kicking
-					booty chaw - your booty, that is!</p></li>
-					</ol>
-				</div> <!-- end categories -->
-			</div>
-		
-			<div id="middle_main">
-				<a id="set"><h2>Get Set…</h2></a>
-					<p><strong>This is where</strong> the familiar avatars shine! Everyone
-					from the sweet looking princesses to the  strangely cute, fantastical
-					racers are profiled.</p>
-
-			<div id="aside">
-					<aside>
-					  <blockquote>&quot;Auto racing is boring except when a car is going at least 172 miles per hour upside down.&quot;</blockquote>
-						<p>Dave Barry</p> <!-- Read more at http://www.brainyquote.com/quotes/keywords/racing.html#Zy3BlJFKp5mcRPRl.99 -->
-					</aside>
-			</div> <!-- end aside -->
-
-<!-- begin character gallery -->
-				<h3>Character Gallery</h3>
-				<div id="char_gal">
-					<div id="char_gal_one">
-					<ul>
-						<li><img src="images/mario.png" width="50" height="50"
-						title="Mario" alt="Mario"/></li>
-						<li><img src="images/luigi.png" width="50" height="50"
-						title="Luigi" alt="Luigi"/></li>
-						<li><img src="images/toad.png" width="50" height="50"
-						title="Toad" alt="Toad"/></li>
-						<li><img src="images/yoshi.png" width="50" height="50"
-						title="Yoshi" alt="Yoshi"/></li>
-						<li><img src="images/peach.png" width="50"
-						height="50" alt="Princess Peach" title="Princess Peach"/></li>
-					</ul>
-					</div> <!-- end gal one -->
-					<div id="char_gal_two">
-					<ul>
-						<li><img src="images/b_mario.png" width="50" height="50"
-						title="Baby Mario" alt="Baby Mario"/></li>
-						<li><img src="images/b_luigi.png" width="50" height="50"
-						title="Baby Luigi" alt="Baby Luigi"/></li>
-						<li><img src="images/wario.png" width="50" height="50"
-						title="Wario" alt="Wario"/></li>
-						<li><img src="images/waluigi.png" width="50" height="50"
-						title="Waluigi" alt="Waluigi"/></li>
-					</ul>
-					</div> <!-- end gal two -->
-			</div>
-
-			<section id="char_profile">
-				<h2>PROFILES</h2>
-
-				<table summary="a synopsis of 9 MarioKartWii characters">
-				<caption>CHARACTER DETAILS</caption>
-					<tr>
-						<th>Name</th>
-						<th>Sex</th>
-						<th>Nature</th>
-						<th>Orientation</th>
-					</tr>
-					<tr>
-						<td>Mario</td>
-						<td>male</td>
-						<td>human</td>
-						<td>good guy</td>
-					</tr>
-					<tr class="odd_row" >
-						<td>Luigi</td>
-						<td>male</td>
-						<td>human</td>
-						<td>good guy</td>
-					</tr>
-					<tr>
-						<td>Toad</td>
-						<td>male</td>
-						<td>fantasy</td>
-						<td>good guy</td>
-					</tr>
-					<tr class="odd_row" >
-						<td>Yoshi</td>
-						<td>n/a</td>
-						<td>fantasy</td>
-						<td>good guy</td>
-					</tr>
-					<tr>
-						<td>Princess Peach</td>
-						<td>female</td>
-						<td>human</td>
-						<td>good guy</td>
-					</tr>
-					<tr class="odd_row" >
-						<td>Baby Mario</td>
-						<td>male</td>
-						<td>human</td>
-						<td>good guy</td>
-					</tr>
-					<tr>
-						<td>Baby Luigi</td>
-						<td>male</td>
-						<td>human</td>
-						<td>good guy</td>
-					</tr>
-					<tr class="odd_row" >
-						<td>Wario</td>
-						<td>male</td>
-						<td>fantasy</td>
-						<td>bad guy</td>
-					</tr>
-					<tr>
-						<td>Waluigi</td>
-						<td>male</td>
-						<td>fantasy</td>
-						<td>bad guy</td>
-					</tr>
-				</table>
-			</section>
-<!-- end character gallery -->
-			</div> <!-- middel main -->
-            
-			<div id="bottom_main">
-				<a id="go"><h2>GO!</h2></a>
-					<p><strong>Proof positive</strong>, that's what we want! There's
-					nothing like a screen-capture of gamers in the throes of high-speed
-					competition. We have shots of bomb drops, peel placing, red and green
-					turtle shells zinging by, and so much more-even the occasional cliff
-					dive or mushroom missing bounce! We feature our favorite
-					shot-of-the-week and by years end we award someone with a
-					shot-of-the-year trophy!</p>
-					<p>Use the form below to submit a snapshot of your cartoony
-					antics.</p>
-
-			<section id="cta">
-					<h3>SNAPSHOT SUBMISSION FORM</h3>
-
-					<form method="get" action="index.html">
-
-						<div>
-							<label for="name_first">Your First Name</label>
-							<input type="text" name="name_first" id="name_first"/>
-						</div>
-
-						<div>
-							<form method="get" action="index.html">
-								<p>
-									<label for="character">Which character is your favorite?</label>
-									<select name="character" id="character">
-										<option>Mario</option>
-										<option>Luigi</option>
-										<option>Toad</option>
-										<option>Yoshi</option>
-										<option>Princess Peach</option>
-										<option>Baby Mario</option>
-										<option>Baby Luigi</option>
-										<option>Wario</option>
-										<option>Waluigi</option>
-									</select>
-								</p>
-						</div>
-
-						<div>
-							<form method="get" action="index.html">
-								<p>
-									<label for="vehicle">Which type of vehicle do you prefer?</label>
-									<select name="vehicle" id="vehicle">
-										<option>kart</option>
-										<option>bike</option>
-									</select>
-								</p>
-						</div>
-
-						<div>
-							<form method="get" action="index.html">
-								<p>
-									<label for="course">Which course style is your favorite?</label>
-									<select name="course" id="course">
-										<option>new</option>
-										<option>retro</option>
-									</select>
-								</p>
-						</div>
-
-						<div>
-							<form method="get" action="index.html">
-								<p>
-									<label for="driving">Would you rather race or battle?</label>
-									<select name="driving" id="driving">
-										<option>race</option>
-										<option>battle</option>
-									</select>
-								</p>
-						</div>
-
-						<div>
-							<label for="description">Briefly describe snapshot</label>
-							<br><textarea rows="15" cols="50" name="description" id="description"></textarea>
-						</div>
-
-						<div>
-							<p>
-								<input type="checkbox" name="player" id="player"/>
-								<label for="player">Check here if your character is included in the picture.</label>
-                            </p>
-						</div>
-
-						<div>
-							<form method="post" action="upload.cgi" enctype="multipart/form-data">
-                            	<label for="upload">Choose your file to upload:</label>
-                            	<br><input type="file" name="upload" id="upload" />
-						</div>
-
-						<div>
-							<p><input type="submit" value="Submit form and upload image" class="button rosy bigrounded" /></p>
-						</div>
-					</section>
-				</div>
-			
-			<div id="bottom">
-				<footer>
-					<section id="terms">
-                    	<p>This site is the work-progress of J.B. Sanchez. All rights reserved.
-                        <br>All images are copyright of their respective owners. Mario Kart Wi is the exclusive product of Nintendo Corp.</p>
-                    </section>
-				</footer>
-			</div>
-		
-		</div>
-	</div> <!--end "wrapper"-->
+		<p> Replace this content with your own.</p>
 	</body>
 </html>
