added heading and paragraph

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Example Title</title>
 	</head>
 	<body>
-		<p> Replace this content with your own.</p>
+		<h1> Heading Example</h1>
+		<p>Lorem Ipsum Dolor Sit Amet, Consectetuer Adipiscing Elit. Nam Cursus. Morbi Ut Mi. Nullam Enim Leo, Egestas Id, Condimentum At, Laoreet Mattis, Massa. Sed Eleifend Nonummy Diam. Praesent Mauris Ante, Elementum Et, Bibendum At, Posuere Sit Amet, Nibh. Duis Tincidunt Lectus Quis Dui Viverra Vestibulum. Suspendisse Vulputate Aliquam Dui. Nulla Elementum Dui Ut Augue. Aliquam Vehicula Mi At Mauris. Maecenas Placerat, Nisl At Consequat Rhoncus, Sem Nunc Gravida Justo, Quis Eleifend Arcu Velit Quis Lacus. Morbi Magna Magna, Tincidunt A, Mattis Non, Imperdiet Vitae, Tellus. Sed Odio Est, Auctor Ac, Sollicitudin In, Consequat Vitae, Orci. Fusce Id Felis. Vivamus Sollicitudin Metus Eget Eros.</P>
 	</body>
 </html>
