beginning to add content, checking work flow

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 	<meta charset="utf-8">
 	<title>COS Trail Runs</title>
 <body>
-
+	<header>
+		<h1>COS Trail Runs</h1>
+	
+	
+	
+	
+	
+	</header>
 
 </body>
 </html>
