adding more content

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 	<title>COS Trail Runs</title>
 <body>
 	<header>
-		<h1>COS Trail Runs</h1>
-	
-	
-	
-	
-	
+		<h1>COS Trail Runs</h1> <!-- to be replaced with a logo -->
+		<p>A trail running guide for the Colorado Springs residents - run rugged!</p>
 	</header>
+	
+	<div="main content">
+	<h2>
 
 </body>
 </html>
