added a subscription button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<header>
 		<h1>COS Trail Runs</h1> <!-- to be replaced with a logo -->
 		<p>A trail running guide for the Colorado Springs residents - run rugged!</p>
+		<input type="submit" value="subscribe to e-letter">
 	</header>
 	
 	<div="main content">
