--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="eng">
-	<meta charset="utf-8">
+<head>
+	<meta charset="utf-8" />
 	<title>COS Trail Runs</title>
+</head>
+
 <body>
 	<header>
 		<h1>COS Trail Runs</h1> <!-- to be replaced with a logo -->
-		<p>A trail running guide for the Colorado Springs residents - run rugged!</p>
-		<input type="submit" value="subscribe to e-letter">
+		<p>A trail running guide for Colorado Springs residents - run rugged!</p>
+		<input type="submit" value="subscribe to monthly e-letter">
 	</header>
 	
 	<div id="main content">
