--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div id="main content">
 		<h2>Calling the fit AND the fat!</h2>
 		<p>Colorado Springs is a haven for runners of every level. From Olympic athletes to weekend warriors, the terrain offers a plethora of workouts and challenges for the active set of Little London. This site offers a glimpse into the local trail running culture in hopes of whetting the appetite of anyone looking to up their game or join the ranks of the many who are out and about at all hours and in every kind of weather putting in time and miles.</p>
-		<p>Explore:</p>
+		<h3>Explore:</h3>
 		<div id="main nav">
 			<ul>
 				<li>trails</li>
