added footer content

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 	</div> <!-- end main content -->
 	
 	<div id="footer">
+		<section id="links">
+			<ul>
+				<li a href="active.com">active.com</li>
+				<li a href="runninersworld.com">Runners World</li>
+				<li a href="http://pprrun.org/news/running_groups.htm">Local Running Clubs</li>
+			</ul>
+		</section> <!-- end links -->
 	
 	
 	
