corrected footer links markup

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 	<div id="footer">
 		<section id="links">
 			<ul>
-				<li a href="active.com">active.com</li>
-				<li a href="runninersworld.com">Runners World</li>
-				<li a href="http://pprrun.org/news/running_groups.htm">Local Running Clubs</li>
+				<li><a href="active.com">active.com</a></li>
+				<li><a href="runninersworld.com">Runners World</a></li>
+				<li><a href="http://pprrun.org/news/running_groups.htm">Local Running Clubs</a></li>
 			</ul>
 		</section> <!-- end links -->
 	
