corrected link url

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<section id="links">
 			<ul>
 				<li><a href="active.com">active.com</a></li>
-				<li><a href="runninersworld.com">Runners World</a></li>
+				<li><a href="runnersworld.com">Runners World</a></li>
 				<li><a href="http://pprrun.org/news/running_groups.htm">Local Running Clubs</a></li>
 			</ul>
 		</section> <!-- end links -->
