editing footer element

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
 	</div> <!-- end main content -->
 	
 	<div id="footer">
-		<section id="links">
-			<ul>
-				<li><a href="http://active.com">active.com</a></li>
-				<li><a href="http://runnersworld.com">Runners World</a></li>
-				<li><a href="http://pprrun.org/news/running_groups.htm">Local Running Clubs</a></li>
-			</ul>
-		</section> <!-- end links -->
+		<h2>Misc. Info</h2>
+			<section id="links">
+					<h3>Links:</h3>
+				<ul>
+					<li><a href="http://active.com">active.com</a></li>
+					<li><a href="http://runnersworld.com">Runners World</a></li>
+					<li><a href="http://pprrun.org/news/running_groups.htm">Local Running Clubs</a></li>
+				</ul>
+			</section> <!-- end links -->
 	
 	
 	
