--- a/index.html
+++ b/index.html
@@ -30,19 +30,20 @@
 	<div id="footer">
 		<h2>Misc. Info</h2>
 			<section id="links">
-					<h3>Links:</h3>
+				<h3>Links:</h3>
 				<ul>
 					<li><a href="http://active.com">active.com</a></li>
 					<li><a href="http://runnersworld.com">Runners World</a></li>
 					<li><a href="http://pprrun.org/news/running_groups.htm">Local Running Clubs</a></li>
 				</ul>
 			</section> <!-- end links -->
-	
-	
-	
-	
-	
-	
+
+			<section id="subscription form">
+				<h3>Subscribe to monthly e-letter:</h3>
+				<!-- insert form here -->
+			</section> <!-- end subscription form -->
+
+
 	</div> <!-- end footer -->
 </body>
 </html>
