adding footer mark up and logo

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 <body>
 	<header>
-		<h1>COS Trail Runs</h1> <!-- to be replaced with a logo -->
+		<img src=images/COS TR logo.JPG alt="uber-cool COS TR logo">
+		<h1>COS Trail Runs</h1>
 		<p>A trail running guide for Colorado Springs residents - <em>run rugged!</em></p>
+		<!-- CTA -->
 		<input type="submit" value="subscribe to monthly e-letter">
 	</header>
 	
@@ -40,7 +42,7 @@
 
 			<section id="subscription form">
 				<h3>Subscribe to monthly e-letter:</h3>
-				<!-- insert form here -->
+				<!-- insert CTA and form here -->
 			</section> <!-- end subscription form -->
 
 
