--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<header>
-		<img src=images/COS TR logo.JPG alt="uber-cool COS TR logo">
+		<img src="images/COS TR logo.JPG" alt="uber-cool COS TR logo">
 		<h1>COS Trail Runs</h1>
 		<p>A trail running guide for Colorado Springs residents - <em>run rugged!</em></p>
 		<!-- CTA -->
