added another cta in footer

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			<section id="subscription form">
 				<h3>Subscribe to monthly e-letter:</h3>
 				<!-- insert CTA and form here -->
+				<input type="submit" value="subscribe to monthly e-letter">
 			</section> <!-- end subscription form -->
 
 
