adding page anchors, commented out galleires from main nav

--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
 				<li>gear</li>
 				<li>tips</li>
 				<li>races</li>
-				<li>galleries</li>
+				<!-- <li>galleries</li> -->
 			</ul>
 		</div> <!-- end main nav -->
 	</div> <!-- end main content -->
+	
+	<div id="trails">
+		<h3><a name=:"trails">trails"</a></h3>
+	</div> <!-- end trails-->
 	
 	<div id="footer">
 		<h2>Misc. Info</h2>
