markup applied to main main for linking to anchor

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h3>Explore:</h3>
 		<div id="main nav">
 			<ul>
-				<li>trails</li>
+				<li><a href="trails">trails</a></li>
 				<li>gear</li>
 				<li>tips</li>
 				<li>races</li>
@@ -30,7 +30,7 @@
 	</div> <!-- end main content -->
 	
 	<div id="trails">
-		<h3><a name=:"trails">trails"</a></h3>
+		<h4><a name=:"trails">trails:</a></h4>
 	</div> <!-- end trails-->
 	
 	<div id="footer">
