correcting anchor link markup

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h3>Explore:</h3>
 		<div id="main nav">
 			<ul>
-				<li><a href="trails">trails</a></li>
+				<li><a href="#trails">trails</a></li>
 				<li>gear</li>
 				<li>tips</li>
 				<li>races</li>
