greated anchor links in main nav

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<div id="main nav">
 			<ul>
 				<li><a href="#trails">trails</a></li>
-				<li>gear</li>
-				<li>tips</li>
-				<li>races</li>
+				<li><a href="#gear">gear</a></li>
+				<li><a href="#tips">tips</a></li>
+				<li><a href="#races">races</a></li>
 				<!-- <li>galleries</li> -->
 			</ul>
 		</div> <!-- end main nav -->
