added approriate anchors in page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
 	<div id="trails">
 		<h4><a name=:"trails">trails:</a></h4>
 	</div> <!-- end trails-->
+
+	<div id="trails">
+		<h4><a name=:"gear">gear:</a></h4>
+	</div> <!-- end gear-->
+
+	<div id="trails">
+		<h4><a name=:"tips">tips:</a></h4>
+	</div> <!-- end tips-->
+
+	<div id="trails">
+		<h4><a name=:"races">races:</a></h4>
+	</div> <!-- end races-->
+
 	
 	<div id="footer">
 		<h2>Misc. Info</h2>
