--- a/index.html
+++ b/index.html
@@ -29,22 +29,23 @@
 		</div> <!-- end main nav -->
 	</div> <!-- end main content -->
 	
-	<div id="trails">
-		<h4><a name=:"trails">trails:</a></h4>
-	</div> <!-- end trails-->
+	<section id="menu sections">
+		<div id="trails">
+			<h4><a name=:"trails">trails:</a></h4>
+		</div> <!-- end trails-->
 
-	<div id="trails">
-		<h4><a name=:"gear">gear:</a></h4>
-	</div> <!-- end gear-->
+		<div id="trails">
+			<h4><a name=:"gear">gear:</a></h4>
+		</div> <!-- end gear-->
 
-	<div id="trails">
-		<h4><a name=:"tips">tips:</a></h4>
-	</div> <!-- end tips-->
+		<div id="trails">
+			<h4><a name=:"tips">tips:</a></h4>
+		</div> <!-- end tips-->
 
-	<div id="trails">
-		<h4><a name=:"races">races:</a></h4>
-	</div> <!-- end races-->
-
+		<div id="trails">
+			<h4><a name=:"races">races:</a></h4>
+		</div> <!-- end races-->
+	</section> <!-- end menu sections -->
 	
 	<div id="footer">
 		<h2>Misc. Info</h2>
