added img gallery

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 			</ul>
 		</div> <!-- end main nav -->
 	</div> <!-- end main content -->
+
+	<div id="photo gallery">
+		<ul>
+			<li>img1</li>
+			<li>img2</li>
+			<li>img3</li>
+			<li>img4</li>
+			<!-- <li>galleries</li> -->
+		</ul>
+	</div> <!-- end gallery -->
 	
 	<section id="menu sections">
 		<div id="trails">
