--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	<div id="main content">
 		<h2>Calling the fit AND the fat!</h2>
 		<p><strong>Colorado Springs is a haven for runners of every level.</strong> From Olympic athletes to weekend warriors, the terrain offers a plethora of workouts and challenges for the active set of Little London. This site offers a glimpse into the local trail running culture in hopes of whetting the appetite of anyone looking to up their game or join the ranks of the many who are out and about at all hours and in every kind of weather putting in time and miles.</p>
+		<article>
+			<h4>World Championships 2013</h4>
+				<p>Moscow will be the site of this years World Championships. More text can go here.</p>
 		<h3>Explore:</h3>
 		<div id="main nav">
 			<ul>
@@ -24,8 +27,11 @@
 				<li><a href="#gear">gear</a></li>
 				<li><a href="#tips">tips</a></li>
 				<li><a href="#races">races</a></li>
-				<!-- <li>galleries</li> -->
 			</ul>
+			<aside>
+				<h4>Did you know?</h4>
+				<p>Running on the moon is fun!</p>
+			</aside>
 		</div> <!-- end main nav -->
 	</div> <!-- end main content -->
 
@@ -36,7 +42,6 @@
 			<li>img2</li>
 			<li>img3</li>
 			<li>img4</li>
-			<!-- <li>galleries</li> -->
 		</ul>
 	</div> <!-- end gallery -->
 	
