added more content to the sections

--- a/index.html
+++ b/index.html
@@ -44,25 +44,38 @@
 			<li>img4</li>
 		</ul>
 	</div> <!-- end gallery -->
-	
+
 	<section id="menu sections">
 		<div id="trails">
 			<h4><a name=:"trails">trails:</a></h4>
+			<h5>Manitou Incline</h5>
+			<p>It's seen the likes of Apollo Ono and, recently, Shaun White.</p>
+			<h5>Cheyenne Canyon</h5>
+			<p>From Seven Falls to Cripple Creek, this area is full of every garde of trail.</p>
+			<h5>Pikes Peak</h5>
+			<p>The Incline is a teaser for what this mammoth of a mountain run is like. People even run it more than once in a day!</p>
+			<h5>Monument Valley Park</h5>
+			<p>Fountain Creek and Bear Creek are just two of the many areas accessible from MVP. The more adventurous and long winded can travel further north or south of Colorado Springs if they so choose.</p>
+			<h5>Red Rock Canyon</h5>
+			<p>This little bit of paradise has so many branches that you can get lost, or at least feel that way.</p>
 		</div> <!-- end trails-->
 
-		<div id="trails">
+		<div id="gear">
 			<h4><a name=:"gear">gear:</a></h4>
+			<p>We recommend the proper set up for the proper run. Seasons are always intertwining regardless of what time of the year it is, so runner be aware!</p>
 		</div> <!-- end gear-->
 
-		<div id="trails">
+		<div id="tips">
 			<h4><a name=:"tips">tips:</a></h4>
+			<p>A wise old sage once said…a lot of things. Even the more youthful can have a bit of wisdom if you just take the time to read.</p>
 		</div> <!-- end tips-->
 
-		<div id="trails">
+		<div id="races">
 			<h4><a name=:"races">races:</a></h4>
+			<p>So far we have the have the Pikes Peak Ascent or Marathon. Pick your poison!</p>
 		</div> <!-- end races-->
 	</section> <!-- end menu sections -->
-	
+
 	<div id="footer">
 		<h2>Misc. Info</h2>
 			<section id="links">
