--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>COS Trail Runs</title>
+	<link 
 </head>
 
 <body>
@@ -51,7 +52,7 @@
 			<h5>Manitou Incline</h5>
 			<p>It's seen the likes of Apollo Ono and, recently, Shaun White.</p>
 			<h5>Cheyenne Canyon</h5>
-			<p>From Seven Falls to Cripple Creek, this area is full of every garde of trail.</p>
+			<p>From Seven Falls to Cripple Creek, this area is full of every grade of trail.</p>
 			<h5>Pikes Peak</h5>
 			<p>The Incline is a teaser for what this mammoth of a mountain run is like. People even run it more than once in a day!</p>
 			<h5>Monument Valley Park</h5>
