--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>COS Trail Runs</title>
-	<link 
+	<link rel="stylesheet" href="css/main">
 </head>
 
 <body>
