--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<div id="wrapper">
 	<header>
 		<img src="images/COS TR logo.JPG" alt="uber-cool COS TR logo" title="Cool logo, huh?" width="200" heigth="200">
 		<h1>COS Trail Runs</h1>
@@ -96,5 +97,6 @@
 
 
 	</div> <!-- end footer -->
+	</div> <!-- end wrapper -->
 </body>
 </html>
