--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		<input type="submit" value="subscribe to monthly e-letter">
 	</header>
 	
-	<div id="main content">
+	<div id="main_content">
 		<h2>Calling the fit AND the fat!</h2>
 		<p class="demo"><strong>Colorado Springs is a haven for runners of every level.</strong> From Olympic athletes to weekend warriors, the terrain offers a plethora of workouts and challenges for the active set of Little London. This site offers a glimpse into the local trail running culture in hopes of whetting the appetite of anyone looking to up their game or join the ranks of the many who are out and about at all hours and in every kind of weather putting in time and miles.</p>
 		<article>
 			<h4>World Championships 2013</h4>
 				<p>Moscow will be the site of this years World Championships. More text can go here.</p>
 		<h3>Explore:</h3>
-		<div id="main nav">
+		<div id="main_nav">
 			<ul>
 				<li><a href="#trails">trails</a></li>
 				<li><a href="#gear">gear</a></li>
@@ -37,7 +37,7 @@
 		</div> <!-- end main nav -->
 	</div> <!-- end main content -->
 
-	<div id="photo gallery">
+	<div id="photo_gallery">
 		<h4>gallery:</h4>
 		<ol>
 			<li>img1</li>
@@ -47,7 +47,7 @@
 		</ol>
 	</div> <!-- end gallery -->
 
-	<section id="menu sections">
+	<section id="menu_sections">
 		<div id="trails">
 			<h4><a name=:"trails">trails:</a></h4>
 			<h5>Manitou Incline</h5>
@@ -89,7 +89,7 @@
 				</ul>
 			</section> <!-- end links -->
 
-			<section id="subscription form">
+			<section id="subscription_form">
 				<h3>Subscribe to monthly e-letter:</h3>
 				<!-- insert CTA and form here -->
 				<input type="submit" value="subscribe to monthly e-letter">
