--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<article>
 			<h4>World Championships 2013</h4>
 				<p>Moscow will be the site of this years World Championships. More text can go here.</p>
+		</article>
 		<h3>Explore:</h3>
 		<div id="main_nav">
 			<ul>
