--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 	<section id="menu_sections">
 		<div id="trails">
-			<h4><a name=:"trails">trails:</a></h4>
+			<h4><a name="trails">trails:</a></h4>
 			<h5>Manitou Incline</h5>
 			<p>It's seen the likes of Apollo Ono and, recently, Shaun White.</p>
 			<h5>Cheyenne Canyon</h5>
@@ -64,17 +64,17 @@
 		</div> <!-- end trails-->
 
 		<div id="gear">
-			<h4><a name=:"gear">gear:</a></h4>
+			<h4><a name="gear">gear:</a></h4>
 			<p>We recommend the proper set up for the proper run. Seasons are always intertwining regardless of what time of the year it is, so runner be aware!</p>
 		</div> <!-- end gear-->
 
 		<div id="tips">
-			<h4><a name=:"tips">tips:</a></h4>
+			<h4><a name="tips">tips:</a></h4>
 			<p>A wise old sage once said…a lot of things. Even the more youthful can have a bit of wisdom if you just take the time to read.</p>
 		</div> <!-- end tips-->
 
 		<div id="races">
-			<h4><a name=:"races">races:</a></h4>
+			<h4><a name="races">races:</a></h4>
 			<p>So far we have the have the Pikes Peak Ascent or Marathon. Pick your poison!</p>
 		</div> <!-- end races-->
 	</section> <!-- end menu sections -->
