--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="logo">
 			<img src="images/COS-TR-logo.png" alt="uber-cool COS TR logo" title="Cool logo, huh?" width="200" height="129">
 		</div> <!-- end logo div -->
-		<h1>COS Trail Runs</h1>
+		<h1>COS Trail Runs</h1><br />
 		<p>A trail running guide for Colorado Springs residents - <em>run rugged!</em></p>
 		<!-- CTA -->
 		<input type="submit" value="subscribe to monthly e-letter">
