--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<li><a href="#tips">tips</a></li>
 				<li><a href="#races">races</a></li>
 			</ul>
-			<aside>
+			<aside id="moon">
 				<h4>Did you know?</h4>
 				<p>Running on the moon is fun!</p>
 			</aside>
