--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<h2>Calling the fit AND the fat!</h2>
 		<div id="columns">
 		<p><strong>Colorado Springs is a haven for runners of every level.</strong> From Olympic athletes to weekend warriors, the terrain offers a plethora of workouts and challenges for the active set of Little London.</p>
-		<p>This site offers a glimpse into the local trail running culture in hopes of whetting the appetite of anyone looking to up their game or join the ranks of the many who are out and about at all hours and in every kind of weather putting in time and miles.</p>
-		<p>It's worth noting that while many pro athletes come to train at altitude, much more of the running is done by amateurs who are looking to reap the benefits of an active lifestyle - that and working out in mother-nature's backyard!</p>
+		<p><strong>This site offers a glimpse</strong> into the local trail running culture in hopes of whetting the appetite of anyone looking to up their game or join the ranks of the many who are out and about at all hours and in every kind of weather putting in time and miles.</p>
+		<p><strong>It's worth noting</strong> that while many pro athletes come to train at altitude, much more of the running is done by amateurs who are looking to reap the benefits of an active lifestyle - that and working out in mother-nature's backyard! This site is mostly for us.</p>
 		</div> <!-- end columns -->
 		<article>
 			<h4>World Championships 2013</h4>
