changing textual look

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 			<h3>Explore:</h3>
 			<div id="main_nav">
 				<ul>
-					<li><a href="#trails" class="button white medium">trails</a></li>
-					<li><a href="#gear" class="button white medium">gear</a></li>
-					<li><a href="#tips" class="button white medium">tips</a></li>
-					<li><a href="#races" class="button white medium">races</a></li>
+					<li><a href="#trails" class="button white medium">TRAILS</a></li>
+					<li><a href="#gear" class="button white medium">GEAR</a></li>
+					<li><a href="#tips" class="button white medium">TIPS</a></li>
+					<li><a href="#races" class="button white medium">RACES</a></li>
 				</ul>
 			</div> <!--end main nav -->
 		</div> <!-- end explore -->
