adjusting font sizes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	</div> <!-- end main content -->
 
 	<div id="photo_gallery">
-		<h4>gallery:</h4>
+		<h4>GALLERY:</h4>
 		<ol>
 			<li>img1</li>
 			<li>img2</li>
