--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<p><strong>This site offers a glimpse</strong> into the local trail running culture in hopes of whetting the appetite of anyone looking to up their game or join the ranks of the many who are out and about at all hours and in every kind of weather putting in time and miles.</p>
 		<p><strong>It's worth noting</strong> that while many pro athletes come to train at altitude, much more of the running is done by amateurs who are looking to reap the benefits of an active lifestyle - that and working out in mother-nature's backyard! This site is mostly for us.</p>
 		</div> <!-- end columns -->
-		<article>
+		<article id="world_champs">
 			<h4>World Championships 2013</h4>
 				<p>Moscow will be the site of this years World Championships. More text can go here.</p>
 		</article>
