--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	<div id="wrapper">
 	<header>
 		<div id="logo">
-			<img src="images/COS-TR-logo.png" alt="uber-cool COS TR logo" title="Cool logo, huh?" width="200" height="129">
+			<img src="images/COS-TR-logo.png" alt="uber-cool COS TR logo" title="Cool logo, huh?" width="200" height="129" />
 		</div> <!-- end logo div -->
 		<h1>COS Trail Runs</h1>
 		<p>A trail running guide for Colorado Springs residents - <em>run rugged!</em></p>
 		<!-- CTA -->
-		<input type="submit" value="subscribe to monthly e-letter">
+		<input type="submit" value="subscribe to monthly e-letter" />
 	</header>
 	
 	<div id="main_content">
@@ -30,7 +30,7 @@
 		 <article id="world_champs">
 			<h3>World Championships 2013</h3>
 				<p>Moscow will be the site of this years World Championships. More text can go here.</p>
-		</article>
+		</article> > <!-- end world_champs -->
 		</div> <!-- end intro -->
 		
 		<div id="explore">
@@ -107,8 +107,8 @@
 <!-- insert CTA and form here -->
 			<section id="subscription_form">
 				<h3>Subscribe to monthly e-letter:</h3>
-				<input type="submit" value="subscribe to monthly e-letter">
-			</section> <!-- end subscription form -->
+				<input type="submit" value="subscribe to monthly e-letter" />
+			</section> <!-- end subscription_form -->
 	</div> <!-- end footer -->
 	</div> <!-- end wrapper -->
 </body>
