removed a random piece of markup

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		 <article id="world_champs">
 			<h3>World Championships 2013</h3>
 				<p>Moscow will be the site of this years World Championships. More text can go here.</p>
-		</article> > <!-- end world_champs -->
+		</article> <!-- end world_champs -->
 		</div> <!-- end intro -->
 		
 		<div id="explore">
