Revert "edited markup"
This reverts commit 0eb8cef1ab6814fff2355a6c7ec28bd7c6224fa7.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div id="wrapper">
 	<header>
 		<div id="logo">
-			<img src="images/COS-TR-logo.png" alt="uber-cool COS TR logo" title="Cool logo, huh?" /> <!-- width="200" height="129" -->
+			<img src="images/COS-TR-logo.png" alt="uber-cool COS TR logo" title="Cool logo, huh?" <!-- width="200" height="129" --> />
 		</div> <!-- end logo div -->
 		<h1>COS Trail Runs</h1>
 		<p>A trail running guide for Colorado Springs residents - <em>run rugged!</em></p>
