--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
 
 		<div id="tips">
 			<h4><a name="tips">TIPS:</a></h4>
-			<p>A wise old sage once said…a lot of things. Even the more youthful can have a bit of wisdom if you just take the time to read.</p>
+			<p>A wise old sage once said…a lot of things. But, even the more youthful can have a bit of wisdom if you just take the time to read.</p>
 		</div> <!-- end tips-->
 
 		<div id="races">
 			<h4><a name="races">RACES:</a></h4>
-			<p>So far we have the have the Pikes Peak Ascent or Marathon. Pick your poison!</p>
+			<p>So far we have the Pikes Peak Ascent (half-marathon) or Marathon. Pick your poison!</p>
 		</div> <!-- end races-->
 	</section> <!-- end menu sections -->
 
