adding table to markup

--- a/index.html
+++ b/index.html
@@ -110,6 +110,34 @@
 				<input type="submit" value="subscribe to monthly e-letter" />
 			</section> <!-- end subscription_form -->
 	</div> <!-- end footer -->
+	
+	<table>
+		<tr>
+			<th>Name</th>
+			<th>Contact (Home)</th>
+			<th>Contact (Work)</th>
+			<th>Location</th>
+		</tr>
+		<tr>
+			<td>John Smith</td>
+			<td>407 679 0100</td>
+			<td>407 679 5555</td>
+			<td>Winter Park, FL</td>
+		</tr>
+		<tr>
+			<td>Jane Smith</td>
+			<td>407 976 0100</td>
+			<td>407 231 5555</td>
+			<td>Winter Garden, FL</td>
+		</tr>
+		<tr>
+			<td>Kevin Smythe</td>
+			<td>407 756 2131</td>
+			<td>407 679 3232</td>
+			<td>Altamonte Springs, FL</td>
+		</tr>
+	</table>
+	
 	</div> <!-- end wrapper -->
 </body>
 </html>
