applying clear to table

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<input type="submit" value="subscribe to monthly e-letter" />
 			</section> <!-- end subscription_form -->
 	</div> <!-- end footer -->
-	
+	<div id="table">
 	<table>
 		<tr>
 			<th>Name</th>
@@ -137,7 +137,7 @@
 			<td>Altamonte Springs, FL</td>
 		</tr>
 	</table>
-	
+	</div> <!-- end table -->
 	</div> <!-- end wrapper -->
 </body>
 </html>
