--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			<td>407 679 5555</td>
 			<td>Winter Park, FL</td>
 		</tr>
-		<tr>
+		<tr class="odd_row">
 			<td>Jane Smith</td>
 			<td>407 976 0100</td>
 			<td>407 231 5555</td>
