--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			</section> <!-- end subscription_form -->
 	</div> <!-- end footer -->
 	<div id="table">
-	<table>
+	<table summary="Local employees and their contact information.">
 		<tr>
 			<th>Name</th>
 			<th>Contact (Home)</th>
