--- a/index.html
+++ b/index.html
@@ -107,7 +107,56 @@
   
 			  <section id="subscription_form">
 				  <h3>Subscribe to monthly e-letter:</h3>
-				  <input type="submit" value="subscribe to monthly e-letter" />
+					<form method="get" action="forms.html"> <!-- other action is "mailto:example@example.com" -->
+				   
+						<div>
+							<label for="name_first">First Name</label> <!-- used to label a control so users know what to do -->
+							<input type="text" name="name_first" id="name_first"/> <!-- allows user to  enter data -->
+						</div>
+
+						<div>
+							<label for="name_last">Last Name</label>
+							<input type="text" name="name_last" id="name_last"/>
+						</div>
+
+						<div>
+							<label for="phone">Phone Number</label>
+							<input type="text" name="phone" id="phone"/>
+						</div>
+
+						<div>
+							<label for="email">Email Address</label>
+							<input type="text" name="email" id="email"/>
+						</div>
+
+						<div>
+							<label for="regarding">Regarding</label>
+						</div>
+
+						<div>
+							<select name="regarding" id="regarding">
+								<option>General Inquiry</option>
+								<option>Suggestion</option>
+								<option>Site Error</option>
+								<option>Legal</option>
+								<option>Press</option>
+							</select>
+						</div>
+
+						<div>
+							<label for="message">Message</label>
+							<textarea rows="15" cols="50" name="message" id="message"></textarea>
+						</div>
+
+						<div>
+							<input type="checkbox" name="contact_phone" id="contact_phone"/>
+							<p>I prefer to be contacted by phone.</p>
+						</div>
+
+						<div>
+							<input type="submit" value="Send Message" />
+						</div>
+					</form>
 			  </section> <!-- end subscription_form -->
 	  </div> <!-- end footer -->
 
