--- a/index.html
+++ b/index.html
@@ -130,27 +130,27 @@
 						</div>
 
 						<div>
-							<label for="regarding">Regarding</label>
+							<label for="runner">Runner Type</label>
 						</div>
 
 						<div>
-							<select name="regarding" id="regarding">
-								<option>General Inquiry</option>
-								<option>Suggestion</option>
-								<option>Site Error</option>
-								<option>Legal</option>
-								<option>Press</option>
+							<select name="runner" id="runner">
+								<option>Professional</option>
+								<option>Amateur</option>
+								<option>Weekend Warrior</option>
+								<option>Jogger</option>
+								<option>Just starting to be serious</option>
 							</select>
 						</div>
 
 						<div>
-							<label for="message">Message</label>
+							<label for="message">Brief description of running experience(s):</label>
 							<textarea rows="15" cols="50" name="message" id="message"></textarea>
 						</div>
 
 						<div>
 							<input type="checkbox" name="contact_phone" id="contact_phone"/>
-							<p>I prefer to be contacted by phone.</p>
+							<p>You may contact me by phone.</p>
 						</div>
 
 						<div>
