--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							<textarea rows="15" cols="40" name="message" id="message"></textarea>
 						</div>
 
-						<div>
+						<div id="checkbox">
 							<input type="checkbox" name="contact_phone" id="contact_phone"/>
 							<p>You may contact me by phone.</p>
 						</div>
