customizing e-ltter submit button

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						</div>
 
 						<div>
-							<input type="submit" value="Send Message" />
+							<input class="button green" type="submit" value="Send Info" />
 						</div>
 					</form>
 			  </section> <!-- end subscription_form -->
