fixing alignment of checkbox text

--- a/index.html
+++ b/index.html
@@ -149,8 +149,10 @@
 						</div>
 
 						<div id="checkbox">
-							<input type="checkbox" name="contact_phone" id="contact_phone"/>
-							<p>You may contact me by phone.</p>
+							<p>
+								<input type="checkbox" name="submit" id="submit"/>
+								<label for="submit">You may contact me by phone.</label>
+							</p>
 						</div>
 
 						<div>
