margin to bottom button

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 							</p>
 						</div>
 
-						<div>
-							<input class="button green" type="submit" value="Send Info" />
+						<div id="subscribe">
+							<input class="button green" type="submit" value="Send & Subscribe" />
 						</div>
 					</form>
 			  </section> <!-- end subscription_form -->
