--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								<option>Just starting to be serious</option>
 							</select>
 						</div>
-					</div> <!-- end conact_info -->
+					</div> <!-- end contact_info -->
 
 						<div id="description">
 							<label for="message">Brief description of running experience(s):</label>
