--- a/index.html
+++ b/index.html
@@ -162,6 +162,43 @@
 						</div>
 					</form>
 			  </section> <!-- end subscription_form -->
+			  
+			<div id="table">
+				  <table summary="runner descriptions"> <!-- table container, summary does not render out -->
+				  <caption>Description Details</caption> <!-- this will render out -->
+					  <tr> <!-- table row -->
+						  <th>Type</th> <!-- table header -->
+						  <th>Sponsored</th>
+						  <th>Famous</th>
+					  </tr>
+					  <tr>
+						  <td>Professional</td> <!-- table data -->
+						  <td>Yes</td>
+						  <td>Yes</td>
+					  </tr>
+					  <tr class="odd_row" > <!-- class is for zebra striping -->
+						  <td>Amateur</td>
+						  <td>Yes</td>
+						  <td>No</td>
+					  </tr>
+					  <tr>
+						  <td>Weekend Warrior</td>
+						  <td>No</td>
+						  <td>No</td>
+					  </tr>
+					  <tr class="odd_row">
+						  <td>Jogger</td>
+						  <td>No</td>
+						  <td>No</td>
+					  </tr>
+					  <tr>
+						  <td>Just Starting</td>
+						  <td>No</td>
+						  <td>Maybe</td>
+					  </tr>
+				  </table>
+				</div> <!-- end table -->
+			  
 	  </div> <!-- end footer -->
 
 	</div> <!-- end wrapper -->
